src/test/deca/context/invalid/unprovided/double_exception.deca
{
// should throw DoubleException
// since x is already defined at line 4
int x;
int x;
}
